# krakentest

./: .gitignore  Cargo.toml  trades.txt
kraken_simu/: Cargo.toml
kraken_simu/src/: main.rs
kraken_ws/: Cargo.toml
kraken_ws/src/: main.rs  trades.rs
src/: main.rs  simu.rs  trades.rs
