[package]
name = "krakentest"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "kraken_ws", "kraken_simu" ]


[[bin]]
name = "kraken_ws"
path = "kraken_ws/src/main.rs"

[[bin]]
name = "kraken_simu"
path = "kraken_simu/src/main.rs"

[dependencies]
fast_websocket_client = { version = "0.2.0" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", default-features = false, features = ["macros",  "parking_lot", "rt-multi-thread", "time"] }
simdutf8 = { version = "0.1.4", features = ["aarch64_neon"] }
chrono = "0.4.38"
rand = "0.8.5"